--- a/docs/.vitepress/theme/style/var.css
+++ b/docs/.vitepress/theme/style/var.css
@@ -1,16 +1,18 @@
 :root {
-    /* 标题 */
+  /* 标题 */
   --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: linear-gradient(120deg, var(--vp-c-green) 1%, #409EFF 100%);
-
+  --vp-home-hero-name-background: linear-gradient(120deg, var(--vp-c-indigo-2) 1%, var(--vp-c-brand) 100%);
+  
   /* 图标背景 */
-  --vp-home-hero-image-background-image: linear-gradient( -45deg, var(--vp-c-green) 10%, #409EFF 50% , #e0e4ef 100%);
+  --vp-home-hero-image-background-image: linear-gradient(-45deg, var(--vp-c-indigo-2) 10%, var(--vp-c-brand) 80%);
   --vp-home-hero-image-filter: blur(98px);
 
   /* brand color */
-  --vp-c-brand: #409EFF;
+  /* --vp-c-brand: #409EFF;
   --vp-c-brand-lighter: #66b1ff;
-  --vp-c-brand-dark:  #3375b9;
-  --vp-button-brand-hover-bg:  #3375b9;
-  --vp-button-brand-active-bg:  #2a598a;
+  --vp-c-brand-dark: #3375b9;
+
+  --vp-button-brand-bg: #3b82f6;
+  --vp-button-brand-hover-bg: #3375b9;
+  --vp-button-brand-active-bg: #2a598a; */
 }
